@@ -1,5 +1,8 @@
 debian-installer (20040327) UNRELEASED; urgency=low
 
+  * Sven Luther
+    - Added powerpc-builtin-initrd.sh script to build kernels with builtin
+      initrd. Need to find the proper place to call it yet though.
   * Joey Hess
     - Some manifest fixups.
   * Colin Watson
